- Added some flavor text - Added a TODO list to the readme file

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     	<div id="container">
 	    	<div class="row">
 	        	<h1 class="text-center">Roman to Decimal calculator</h1>
+	        	<h4>Ever wanted to know what's the value of a Roman Numeral? This is the perfect place for you!</h4>
+	        	<p>It's quite simple: type in the roman representation and the calculations will be shown below! It's that simple! Enjoy!</p>
 	        	<div>
 					<form class="form-horizontal" id="romanForm">
 						<div class="form-group">
